--- a/Parkomatic/appsettings.json
+++ b/Parkomatic/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ParkomaticContext": "Server=localhost\\SQLEXPRESS;Database=ParkomaticContext.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
 }
